--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -1,13 +1,15 @@
 .app {
     display: flex;
     justify-content: center;
+    overflow-y: auto;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
+    background-color: var(--desaturated-dark-cyan);
     
     .app_content {
+        overflow-x: hidden;
         width: 100%;
         max-width: 1440px;
-        overflow: hidden;
         background-color: var(--light-grayish-cyan);
 
         .header {
@@ -30,6 +32,14 @@
                     display: flex;
                 }
             }
+        }
+
+        .elements {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 50px 0;
+            row-gap: 45px;
         }
     }
 }
