--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,9 +17,10 @@ body {
   /* Primary */
 
   --desaturated-dark-cyan: hsl(180, 29%, 50%);
+  --desaturated-dark-cyan-low-op: hsla(180, 29%, 50%, 0.192);
 
   /* Neutral */
-  
+  --white: white;
   --very-light-grayish-cyan: hsl(180, 31%, 95%);
   --light-grayish-cyan: hsl(180, 52%, 96%);
   --dark-grayish-cyan: hsl(180, 8%, 52%);
