--- a/src/components/job-card/styles.module.scss
+++ b/src/components/job-card/styles.module.scss
@@ -3,6 +3,7 @@
     position: relative;
     justify-content: center;
     width: 90%;
+    min-width: 270px;
     max-width: 1000px;
     padding: 30px 20px;
     background-color: var(--white);
@@ -94,7 +95,7 @@
 
             .last_row {
                 display: flex;
-                column-gap: 10px;
+                column-gap: 5px;
                 color: var(--dark-grayish-cyan);
             }
         }
@@ -139,6 +140,10 @@
                     .main_sup {
                         border-bottom: 0;
                         padding-bottom: 0;
+
+                        .last_row {
+                            column-gap: 10px;
+                        }
                     }
                 }
             }
