--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -7,6 +7,9 @@
     background-color: var(--desaturated-dark-cyan);
     
     .app_content {
+        display: flex;
+        position: relative;
+        flex-direction: column;
         overflow-x: hidden;
         width: 100%;
         max-width: 1440px;
@@ -34,12 +37,68 @@
             }
         }
 
+        .filter {
+            position: absolute;
+            top: calc(156px - 50px);
+            width: 90%;
+            min-width: 270px;
+            height: fit-content;
+            max-width: 1000px;
+            padding: 30px 25px;
+            background-color: var(--white);
+            align-self: center;
+            border-radius: 10px;
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+
+            .filter_content {
+                display: flex;
+                overflow: hidden;
+                flex-wrap: wrap;
+                gap: 10px 20px;
+
+                .keys {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    column-gap: 20px;
+                    border-radius: 4px;
+                    background-color: var(--desaturated-dark-cyan-low-op);
+                    transition: all .15s ease-in-out;
+
+                    span {
+                        color: var(--desaturated-dark-cyan);
+                        font-weight: 700;
+                        margin-left: 10px;
+                    }
+                    
+                    button {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        height: 30px;
+                        padding: 5px;
+                        background-color: var(--desaturated-dark-cyan);
+                        color: var(--white);
+                        border-radius: 0 4px 4px 0;
+                        cursor: pointer;
+                    }
+
+                }
+            }
+        }
+
         .elements {
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 50px 0;
+            padding: 70px 0;
             row-gap: 45px;
+
+            @media (max-width: 600px) {
+                & {
+                    padding: 90px 0;
+                }
+            }
         }
     }
 }
